--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<dbunit.version>2.5.1</dbunit.version>
 		<commons-lang.version>3.4</commons-lang.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
-		<servlet.version>3.1</servlet.version>
+		<servlet.version>3.1.0</servlet.version>
 		<jsp.version>2.1</jsp.version>
 		<spring.version>4.0.9.RELEASE</spring.version>
 		<spring-security.version>3.2.8.RELEASE</spring-security.version>
@@ -145,7 +145,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>2.6</version>
+					<version>${maven-war-plugin.version}</version>
 					<configuration>
 						<warSourceDirectory>src/main/webapp</warSourceDirectory>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
