--- a/pom.xml
+++ b/pom.xml
@@ -1345,7 +1345,7 @@
 
 		<servlet.version>3.0.1</servlet.version>
 		<jsp.version>2.1</jsp.version>
-		<jetty.version>7.6.16.v20140903</jetty.version>
+		<jetty.version>9.3.5.v20151012</jetty.version>
 
 		<spring.version>4.0.9.RELEASE</spring.version>
 		<spring-security.version>3.2.8.RELEASE</spring-security.version>
@@ -1441,12 +1441,17 @@
 						</configuration>
 					</plugin>
 					<plugin>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>maven-jetty-plugin</artifactId>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-maven-plugin</artifactId>
+						<version>${jetty.version}</version>
 						<configuration>
 							<scanIntervalSeconds>10</scanIntervalSeconds>
 							<stopPort>8005</stopPort>
 							<stopKey>STOP</stopKey>
+							<webApp>
+								<contextPath>/SmartPlatform</contextPath>
+							</webApp>
+							<jettyXml>jetty.xml</jettyXml>
 						</configuration>
 						<executions>
 							<execution>
