--- a/pom.xml
+++ b/pom.xml
@@ -1332,6 +1332,7 @@
 	<properties>
 		<java.version>1.7</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<tagBase>svn://localhost/mossle/tags</tagBase>
 
