--- a/pom.xml
+++ b/pom.xml
@@ -1346,7 +1346,7 @@
 
 		<servlet.version>3.0.1</servlet.version>
 		<jsp.version>2.1</jsp.version>
-		<jetty.version>9.3.5.v20151012</jetty.version>
+		<jetty.version>9.3.6.v20151106</jetty.version>
 
 		<spring.version>4.0.9.RELEASE</spring.version>
 		<spring-security.version>3.2.8.RELEASE</spring-security.version>
@@ -1386,7 +1386,7 @@
 		<jedis.version>2.7.3</jedis.version>
 		<jms.version>1.1.1</jms.version>
 		<jstl.version>1.2</jstl.version>
-		<spring-session.version>1.0.2.20150803</spring-session.version>
+		<spring-session.version>1.0.2.RELEASE</spring-session.version>
 		<freemarker.version>2.3.23</freemarker.version>
 		<jasperreports.version>6.1.1</jasperreports.version>
 		<drools.version>6.3.0.Final</drools.version>
