--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ application.i18n.packages=org.springframework.security.messages,\
 	com.mossle.user.messages,\
 	com.mossle.layout.messages
 application.database.type=h2
+#application.database.type=mysql
 application.baseUrl=http://localhost:8080/lemon
+#application.baseUrl=http://localhost:8080/SmartPlatform
 
 
 # ============================================================================
