--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,20 +9,26 @@ application.i18n.packages=org.springframework.security.messages,\
 	com.mossle.core.messages,\
 	com.mossle.user.messages,\
 	com.mossle.layout.messages
-application.database.type=h2
-#application.database.type=mysql
-application.baseUrl=http://localhost:8080/lemon
-#application.baseUrl=http://localhost:8080/SmartPlatform
+#application.database.type=h2
+application.database.type=mysql
+#application.baseUrl=http://localhost:8080/lemon
+application.baseUrl=http://localhost:8080/SmartPlatform
 
 
 # ============================================================================
 # db
 # ============================================================================
-db.default.driverClassName=org.hsqldb.jdbcDriver
-# db.default.url=jdbc:hsqldb:file:db;shutdown=true
-db.default.url=jdbc:hsqldb:.
-db.default.username=sa
+db.default.driverClassName=com.mysql.jdbc.Driver
+db.default.url=jdbc:mysql://localhost:3306/lemon?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+db.default.username=root
 db.default.password=
+db.default.validationQuery=select 1
+
+#db.default.driverClassName=org.hsqldb.jdbcDriver
+# db.default.url=jdbc:hsqldb:file:db;shutdown=true
+#db.default.url=jdbc:hsqldb:.
+#db.default.username=sa
+#db.default.password=
 db.default.defaultAutoCommit=false
 db.default.initialSize=1
 db.default.maxActive=60
@@ -34,7 +40,7 @@ db.default.removeAbandonedTimeout=180
 db.default.testWhileIdle=true
 db.default.testOnBorrow=false
 db.default.testOnReturn=false
-db.default.validationQuery=SELECT * FROM INFORMATION_SCHEMA.SYSTEM_SCHEMAS
+#db.default.validationQuery=SELECT * FROM INFORMATION_SCHEMA.SYSTEM_SCHEMAS
 db.default.timeBetweenEvictionRunsMillis=30000
 db.default.numTestsPerEvictionRun=100
 
