--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -268,7 +268,7 @@ userauth.connector.type=database
 # ============================================================================
 # store
 # ============================================================================
-store.baseDir=mossle.store
+store.baseDir=D:/tmp/mossle.store
 
 
 # ============================================================================
